# AlloyForge

./: Cargo.toml  README.md
crates/af-backend-candle/: Cargo.toml
crates/af-backend-candle/src/: lib.rs
crates/af-cli/: Cargo.toml
crates/af-cli/src/: main.rs
crates/af-core/: Cargo.toml
crates/af-core/src/: lib.rs
crates/af-io/: Cargo.toml
crates/af-io/src/: lib.rs
crates/af-modalities/: Cargo.toml
crates/af-modalities/src/: lib.rs
crates/af-models/: Cargo.toml
crates/af-models/src/: lib.rs
crates/af-models/src/qwen2/: config.rs  mod.rs  model.rs
crates/af-models/tests/: test_qwen2.rs  test_qwen2_generate.rs  test_qwen2_quick.rs
crates/af-ops/: Cargo.toml
crates/af-ops/src/: lib.rs
crates/af-runtime/: Cargo.toml
crates/af-runtime/src/: lib.rs
crates/af-server/: Cargo.toml
crates/af-server/src/: lib.rs
crates/af-tokenizer/: Cargo.toml
crates/af-tokenizer/src/: lib.rs
