[package]
name = "af-models"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
af-runtime = { path = "../af-runtime" }
af-modalities = { path = "../af-modalities" }
af-io = { path = "../af-io" }

# Candle 依赖（从 af-backend-candle 传递）
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", tag = "0.9.1", features = ["accelerate"]}
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", tag = "0.9.1" }
candle-flash-attn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", tag = "0.9.1", optional = true }

[dev-dependencies]
af-ops = { path = "../af-ops" }
af-tokenizer = { path = "../af-tokenizer" }

[features]
flash-attn = ["candle-flash-attn"]

